--- a/blog-2.html
+++ b/blog-2.html
@@ -557,99 +557,142 @@
                             </div>
 
                             <p class="fw-600 fs-3 main-title my-5">
-                                Əmək haqqının uçotu qrupunun üzləşdiyi çətinliklər hansılardır?
+                                Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizin Böyüməsini Necə kömək edə bilər?
                             </p>
                             <p class="text fs-2 my-5">
-                                Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin yerinə
-                                yetirdiyi yorucu işlərdən biridir. Bu, təkcə vaxt aparan bir proses deyil, həm də ən
-                                mürəkkəb proseslərdən biridir. Əsasən firmalar xərcləri azaltmaq üçün bu cür prosesləri
-                                kadrlar şöbəsinə və ya maliyyə departamentinə ayırırlar, lakin bu, adətən səmərəsizliyə
-                                səbəb olur, çünki kadrlar və ya maliyyə departamentlərinin əmək haqqının uçotu və
-                                işlənməsi sahəsində adekvat təlim və təcrübəyə malik olmaya bilər. Əmək haqqı mühasibat
-                                komandasının qarşılaşdığı ümumi çətinliklərdən bəziləri aşağıda verilmişdir:
+                                Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini saxlamaq üçün qurulmuş
+                                xüsusi mühasibat uçotu sisteminə əməl edir. Mühasibat uçotu və mühasibat uçotu biznesin
+                                əsas funksiyalarından biridir və biznesin gözləntilərinə cavab verməsini təmin etmək
+                                üçün vaxtaşırı təhlil edilməlidir.
                             </p>
                             <p class="fw-600 fs-2-4 main-title my-5">
-                                1. Ənənəvi əmək haqqı sistemi
+                                Mühasibat uçotu sisteminin təhlili nədir?
                             </p>
                             <p class="text fs-2 my-5">
-                                Ənənəvi əmək haqqının hesablanması prosesində çoxlu kağız işləri var və bu yorucudur.
-                                İşçi məlumatları da səhvlərə və fırıldaqlara qarşılaşıla bilər və təşkilat daxilində hər
-                                cür hesabat və məlumatı paylaşmaq da çətinləşir. Bu cür məlumatların və məlumatların
-                                ehtiyat nüsxəsi də saxlanıla bilməz.
+                                Sadə dillə desək, mühasibat uçotu sisteminin təhlili firmanın izlədiyi mövcud uçot
+                                sisteminin qiymətləndirilməsi və təhlili deməkdir. O, firmalara mühasibat uçotunun
+                                üstünlük təşkil edən çatışmazlıqlarını və bu cür çatışmazlıqları aradan qaldırmaqla
+                                firmanın gözlənilən mənfəəti necə əldə edə biləcəyini müəyyən etməyə kömək edir.
                             </p>
                             <p class="fw-600 fs-2-4 main-title my-5">
 
-                                2.Qanun və qaydalara əməl edilməməsi
 
-                            </p>
-                            <p class="text fs-2 my-5">
-                                Hər bir sahibkarlıq subyekti üçün ölkə qaydalarına riayət etmək çox vacibdir. Əmək haqqı
-                                sistemi ilə məşğul olan şəxslər vergi qanunlarından və hər cür işçi qaydalarından
-                                xəbərdar olmalıdırlar ki, maaş və əmək haqqını bu əsasda hesablaya bilsinlər. Onlar
-                                həmçinin qanunlara edilən dəyişikliklərlə bağlı yenilənməlidirlər. Bir səhlənkarlıq
-                                külli miqdarda cərimə və ya cərimələrlə nəticələnəcək
+                                Mühasibat uçotu sisteminin təhlilini aparmaqla firmalar gözlənilən nəticələrə effektiv
+                                şəkildə nail olmaq üçün mühasibat uçotu sistemində lazımi dəyişikliklər edə bilərlər
+
+
                             </p>
                             <p class="fw-600 fs-2-4 main-title my-5">
 
-                                3. Məxfilik və məxfilik məsələləri
+                                1. Təhlil
 
                             </p>
                             <p class="text fs-2 my-5">
-                                Məlumatların paylaşılması təşkilatların üzləşdiyi ən ümumi problemlərdən biridir. Əmək
-                                haqqı prosesinə işçilərlə bağlı bir çox vacib məlumatlar, məsələn, bank hesabı
-                                rekvizitləri və s. sızmalarla bağlı təşkilat ciddi məxfilik siyasətini qəbul etməli və
-                                insanların bu cür məlumatlara çıxışını məhdudlaşdırmalıdır.
+                                Mühasibat uçotu sistemi hər bir biznes firmasının asılı olduğu konkret bazadır.
+                                Müəssisənin fəaliyyətinin və maliyyə vəziyyətinin ölçüldüyü mühasibat uçotu prosesidir.
+                                Biznes mühiti dinamik xarakter daşıdığından, biznes firmalarının tələbləri də dəyişməkdə
+                                davam edir. Bundan əlavə, firmaların işin xarakterində və növündə və əməliyyatlarda baş
+                                verən dəyişikliklərlə edilməsi lazım olan dəyişiklikləri müəyyən etmək üçün mühasibat
+                                uçotu sistemini vaxtaşırı təhlil etmələri çox vacibdir. Dəyişikliklərin təhlilindən
+                                sonra firmalar mühasibat uçotu sistemini tələblərə uyğun olaraq dəyişdirməyə
+                                başlayırlar.
+                            </p>
+                            <p class="text fs-2 my-5">
+                                Mühasibat uçotu sistemi hər bir biznes firmasının asılı olduğu konkret bazadır.
+                                Müəssisənin fəaliyyətinin və maliyyə vəziyyətinin ölçüldüyü mühasibat uçotu prosesidir.
+                                Biznes mühiti dinamik xarakter daşıdığından, biznes firmalarının tələbləri də dəyişməkdə
+                                davam edir. Bundan əlavə, firmaların işin xarakterində və növündə və əməliyyatlarda baş
+                                verən dəyişikliklərlə edilməsi lazım olan dəyişiklikləri müəyyən etmək üçün mühasibat
+                                uçotu sistemini vaxtaşırı təhlil etmələri çox vacibdir. Dəyişikliklərin təhlilindən
+                                sonra firmalar mühasibat uçotu sistemini tələblərə uyğun olaraq dəyişdirməyə
+                                başlayırlar.
                             </p>
                             <p class="fw-600 fs-2-4 main-title my-5">
 
-                                4.Ödənişlərin gecikdirilməsi
+                                2. Dizayn
 
                             </p>
                             <p class="text fs-2 my-5">
-                                Əmək haqqının işlənməsi yüksək səviyyəli dəqiqlik və səhvsiz hesablamalar tələb etdiyi
-                                üçün çox vaxt sərf edir. Bir çox firma işçilərə ödənişlərin gecikdirilməsi problemi ilə
-                                üzləşə bilər. Bu, əsasən əmək haqqının əl ilə ödənilməsi prosesi və bu cür vəzifələri
-                                yerinə yetirmək üçün təyin edilmiş qeyri-ixtisaslaşmış şəxslərlə bağlıdır. Ödənişlərin
-                                gecikdirilməsi işçilərin mənəviyyatına təsir edə bilər və bəzən onların motivasiyasını
-                                da azalda bilər.
+                                Təhlil prosesindən sonra mühasibat uçotu sisteminin layihələndirilməsinə başlanılır.
+                                Yeni mühasibat uçotu sistemi şirkətin tələbləri ilə yanaşı, mühasibat işində mühüm rol
+                                oynayan şəxslərin tələblərini də yerinə yetirməlidir. O, yenidən işlənmiş və yenilənmiş
+                                mühasibat uçotu qanun və prinsiplərini və vergi dərəcələri ilə bağlı digər yenilikləri
+                                və s. ehtiva etməlidir.
                             </p>
                             <p class="fw-600 fs-2-4 main-title my-5">
 
-                                5.Maliyyə departamentinin üzərinə düşən yükün artması
+                                3. İcra
 
                             </p>
                             <p class="text fs-2 my-5">
-                                Daha əvvəl qeyd edildiyi kimi, əksər təşkilatlarda əmək haqqı sistemləri üzrə
-                                ixtisaslaşmış ayrı əmək haqqı şöbələri və ya komandaları yoxdur. Onlar bu vəzifələri
-                                əsasən kadrlar departamentinə və ya əsas vəzifələri ilə məşğul olan maliyyə şöbəsinə
-                                həvalə edirlər. Onlara əmək haqqı prosesləri həvalə olunduqda, onlar heç bir fəaliyyəti
-                                səmərəli şəkildə həyata keçirə və ya həyata keçirə bilməyəcəklər və əsas təcrübə və ya
-                                təlimə malik olmadıqları vəzifələri yerinə yetirmək üçün təzyiq hiss edə bilərlər və
-                                buna görə də əmək haqqı prosesləri dəqiq aparılmamalıdır.
+                                Tələb olunan uçot sisteminin təhlili və layihələndirilməsindən sonra növbəti hissə
+                                tətbiq edilir. Bu çox vaxt aparan bir prosesdir, hətta yeni sistemin tətbiqindən sonra
+                                dəyişikliklər tələb oluna biləcək çox şey ola bilər. Müəssisənin mühasibat komandası da
+                                yeni mühasibat uçotu sistemi ilə bağlı adekvat təlimlə təmin edilməlidir. Mühasibat
+                                uçotu sisteminin mürəkkəbliyi də sistemin tətbiqi üçün vaxt təyin edən amildir
                             </p>
 
 
 
                             <p class="text fs-2 my-5">
-                                Şirkət bu kimi problemlərin əsas səbəbini müəyyən etmək üçün hərtərəfli araşdırma
-                                apardıqda anladı ki, şirkətin tətbiq etdiyi əməkhaqqı sistemi o qədər də səmərəli və
-                                dəqiq deyil, buna görə də işçilər ödənişlərini gec alır və edilən vergi tutulmaları da
-                                öz işinə yarayır. həm də yersiz, bu, işçinin, mənəviyyatının azalması və işçi
-                                dövriyyəsinin artması ilə nəticələndi. Şirkət daha sonra əmək haqqı prosesinin yükündən
-                                azad oluna və xərcləri azaltmağa imkan verən əmək haqqı xidmətini autsorsing etməklə
-                                problemi həll etmək qərarına gəldi. Əmək haqqı xidmətinin autsorsinqi sayəsində şirkət
-                                indi diqqətini daha keyfiyyətli mallar təqdim etmək məqsədinə yönəldə bildi.
+                                Bunlar mühasibat uçotu sisteminin təhlilinin müəssisələr tərəfindən diqqət yetirilməli
+                                olan əsas üç hissəsidir. Düzgün mühasibat uçotu sistemi vasitəsilə firma heç bir
+                                məhdudiyyət olmadan tələb olunan artımı əldə edə bilər.
+                            </p>
+
+                            <p class="text fs-2-4 fw-600 my-5">
+
+                                Mühasibat uçotu sisteminin təhlilinin üstünlükləri nələrdir?
+
                             </p>
 
                             <p class="text fs-2 my-5">
-
-                                Yuxarıdakı nümunə araşdırmasından çox aydın olur ki, əmək haqqı xidmətlərinin
-                                autsorsingi yuxarıda qeyd olunan çətinliklərlə üzləşmək üçün firmalar tərəfindən qəbul
-                                edilə bilən ən səmərəli və sərfəli strategiyadır. Əmək haqqı xidmətlərinin autsorsinqi
-                                təkcə maya dəyərini azaltmır, həm də dəqiq hesablamaları və torpağın qanun və
-                                qaydalarına uyğunluğu təmin edir.
-
+                                Mühasibat uçotu sisteminin təhlili biznes üçün mühüm rol oynayır, mühüm üstünlüklərdən
+                                bəziləri aşağıda verilmişdir:
                             </p>
+                            <p class="text fs-2 my-5">
+                                1. Bu, biznesin daha yaxşı başa düşülməsini təmin edir
+                            </p>
+                            <p class="text fs-2 my-5">Mühasibat uçotu sisteminin təhlili müəssisəyə öz fəaliyyəti və
+                                firmanın cari vəziyyəti
+                                haqqında geniş təsəvvür yaradacaqdır. Şəffaf mənzərənin köməyi ilə firma optimal gəlir
+                                əldə etmək üçün mühasibat uçotu sistemində lazımi dəyişikliklər edə bilər</p>
+
+
+                            <p class="text fs-2 my-5">
+                                2. Biznesin çiçəklənməsini ən yaxşı şəkildə təmin edir:
+                            </p>
+                            <p class="text fs-2 my-5">Mühasibat uçotu sisteminin təhlili biznesin inkişafı və
+                                çiçəklənməsinə kömək edəcək, çünki o, biznesin cari iş şəraiti haqqında məlumat verəcək
+                                və firmaya gələcək üçün planlar qurmağa imkan verəcəkdir. Planı tərtib etdikdən sonra
+                                firma tədricən aparılan təhlil əsasında tərtib edilmiş plana nail olmağa diqqət
+                                yetirəcəkdir.</p>
+
+                            <p class="text fs-2 my-5">
+                                3. Müsabiqənin qiymətləndirilməsinə kömək edir və onun hazırlanmasına kömək edir:
+                            </p>
+
+                            <p class="text fs-2 my-5">Bu, müxtəlif müəssisələrin mühasibat uçotu sistemini müqayisə
+                                etməyə imkan verdiyi üçün mühasibat təhlilinin ən böyük üstünlüklərindən biri hesab
+                                olunur. Təhlil vasitəsilə şirkət istifadə olunan mühasibat uçotu sistemi ilə tanış olur
+                                və firma müqayisə əsasında gələcək rəqabəti qarşılamaq üçün sistemdə dəyişikliklər edə
+                                bilər.</p>
+
+                            <p class="text fs-2 my-5">
+                                4. Bütün biznes resurslarından optimal istifadə
+                            </p>
+
+                            <p class="text fs-2 my-5">Mühasibat uçotu sisteminin təhlili bütün biznes resurslarının
+                                məqsədəuyğun şəkildə istifadə edilməsini təmin edir ki, bu da avtomatik olaraq biznesin
+                                işində səmərəsizliyə səbəb olacaq və mənfəətin artımını artıracaqdır.</p>
+                            <p class="text fs-2 my-5">
+                                Yuxarıda qeyd olunan üstünlüklər mühasibat uçotunun təhlili sisteminə olan ehtiyacı açıq
+                                şəkildə əks etdirir. Effektiv mühasibat təhlili sisteminin köməyi ilə müəssisə
+                                gözlənilən artıma nail ola bilər.
+                            </p>
+
+
+
 
 
 
