--- a/insights.html
+++ b/insights.html
@@ -568,7 +568,7 @@
                                     </div>
                                     <div class="text-wrapper p-4">
                                         <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                                        <a href="#">
+                                        <a href="blog-1.html">
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Returning your business
                                             </p>
@@ -589,7 +589,7 @@
                                     </div>
                                     <div class="text-wrapper p-4">
                                         <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                                        <a href="#">
+                                        <a href="blog-2.html">
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Returning your business
                                             </p>
