--- a/why-fac.html
+++ b/why-fac.html
@@ -530,48 +530,45 @@
         <div class="row">
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-1.jpg')">
-              <div class="personel-card-title white">Services</div>
-              <div class="personel-card-info white mt-5">Audit</div>
+              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-info white mt-5">Audit Xidmətləri</div>
               <div class="personel-card-sub white my-3">
-                Seasoned practitioners who deliver thoughtful, insightful
-                options leading to high quality independent audits. Lorem
-                ipsum dolor, sit amet
+                Audit xidmətləri FA Audit Consulting tərəfindən müştərilərinə göstərdiyi xidmətlərin əsasını təşkil
+                edir. Biz multidissiplinar partnorlarımıza yüksək keyfiyyətli audit servisləri təqdim edirik.
               </div>
               <a href="./audit.html">
                 <button class="btndefault btn-w border-w">
-                  Learn about our commitment quality
+                  Audit Xidmətlərimiz haqqında məlumat əldə edin
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-2.jpg')">
-              <div class="personel-card-title white">Services</div>
-              <div class="personel-card-info white mt-5">Tax</div>
+              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-info white mt-5">Vergi Xidmətləri</div>
               <div class="personel-card-sub white my-3">
-                Knowledgeable professionals who can help our firm clients
-                assess and manage tax complexities, deal with business
-                realities, and be ready for the future
+                Müştərilərimizə kömək edə biləcək bilikli mütəxəssislər vergi mürəkkəbliyini aradan qaldıraraq, biznesli
+                gələcəyə hazırlıyır
               </div>
               <a href="./services-tax.html">
                 <button class="btndefault btn-w border-w">
-                  Understand our tax expertise
+                  Vergitutma işlərinizi FA Audit Consulting-ə etibar edin
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-3.jpg')">
-              <div class="personel-card-title white">Services</div>
-              <div class="personel-card-info white mt-5">Advisory</div>
+              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-info white mt-5">Məsləhət Xidmətləri</div>
               <div class="personel-card-sub white my-3">
-                Progressive thinkers who provide operational and transactional
-                advisory services to enable our clients to create, protect,
-                and transform value.
+                Müştərilərimizə dəyər yaratmaq və onlara dəyişdirmək imkanı vermək üçün əməliyyat məsləhət xidmətləri
+                göstəririk
               </div>
               <a href="./services-advisory.html">
                 <button class="btndefault btn-w border-w">
-                  How our network can help you
+                  Məsləhət xidmətlərimiz sizə necə kömək edə bilər
                 </button>
               </a>
             </div>
