--- a/about-us.html
+++ b/about-us.html
@@ -110,7 +110,7 @@
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
             <form action="#" class="toggleInput" style="display: none;">
-              <input type="text" class="search-input">
+              <input type="text" class="search-input" placeholder="Search">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
               Sizin Maliyyə Sabitliyiniz
@@ -463,44 +463,6 @@
               komandası müştərilərin mühasibat uçotu, vergitutma və hesabatların Beynəlxalq Maliyyə Hesabatları
               Standartlarına uyğun tənzimlənməsi üçün aktual mövzular üzrə mütəmadi olaraq təlimlər və seminarlar
               keçirir.
-            </p>
-            <p class="fw-600 fs-3 main-title mt-5">
-              Niyə biz?
-            </p>
-            <p class="text fs-2 my-2 fw-600">
-              Bütün dünyada maliyyə tənzimləyici orqanları beynəlxalq ticarəti idarə etmək üçün hazırlanmış kompleks
-              mühasibat uçotu normlarını hər il artan formanda təqdim etdilər.
-            </p>
-            <p class="text fs-2 my-2">
-              Hesabatlarımızda təqdim etdiyimiz nəticələr və tövsiyələrimiz müştərilərimizin muhasibat, audit, vergi
-              həllərinin asanlaşdırmaq üçündür.
-            </p>
-            <p class="text fs-2 my-2">
-              Bizim rolumuz təkcə uyğunluğu asanlaşdırmaq deyil, həm də fəaliyyət göstərdiyiniz hər bir sahə üçün düzgün
-              strateji və vergi məsləhətləri almanızı təmin etməkdir.
-            </p>
-            <p class="fw-600 fs-3 main-title mt-5">
-              Müştərilərimiz
-            </p>
-            <p class="text fs-2 my-2 fw-600">
-              FA Audit Consulting audit ehtiyaclarınıza diqqət yetirir.
-            </p>
-            <p class="text fs-2 my-2">
-              Müştərilərimizin hər biri, şirkətin böyüklüyündən asılı olmayaraq, bizim üçün birmənalı şəkildə vacibdir
-              və ildən-ilə məmnun müştəri sayımızın artmas bizneslərinə qatdıgımız əhəmiyyətli dəyəri əks etdirir.
-            </p>
-
-            <p class="fw-600 fs-3 main-title mt-5">
-              Komandamız
-            </p>
-            <p class="text fs-2 my-2 fw-600">
-              FA Audit Consulting insanlara inkişaf etmək imkanı verilən gənc və dinamik bir mühitdir.
-            </p>
-            <p class="text fs-2 my-2">
-              Tərəfdaşlarımız həm akademik, həm də kommersiya iş mühitində geniş ixtisaslara, biliklərə, bacarıqlara və
-              təcrübəyə malikdirlər. Onların işlərinə olan şəxsi diqqəti, uzun illər ərzində qazandıqları geniş təcrübə
-              və müştərilərimizlə qurdugları peşakar münasibətlər şirkətimizə yüksək dəyər qatır. Bundan əlavə, bizim
-              müştəri tələblərini tam başa düşmək və həll etmək üçün müstəsna dərəcədə güclü önəm yetiririk.
             </p>
           </div>
         </div>
