--- a/customers.html
+++ b/customers.html
@@ -110,7 +110,7 @@
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
             <form action="#" class="toggleInput" style="display: none;">
-              <input type="text" class="search-input">
+              <input type="text" class="search-input" placeholder="Search">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
               Sizin Maliyyə Sabitliyiniz
@@ -450,24 +450,17 @@
       <div class="container">
         <div class="row my-5">
           <div class="col-12">
-            <p class="fw-600 fs-3 main-title">
-              Going beyond is what makes FA Consulting different. And what
-              clients value most.
+
+
+            <p class="text fs-2 my-2 fw-600">
+              FA Audit Consulting audit ehtiyaclarınıza diqqət yetirir.
             </p>
-            <p class="fw-600 fs-3 main-title my-5">
-              We make business personal.
-            </p>
-            <p class="text fs-2 my-5">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-              a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-              quibusdam sint dolor voluptatem excepturi corporis. Expedita
-              delectus non qui vitae velit omnis corrupti ducimus, quas
-              consequatur sequi blanditiis autem deserunt harum architecto
-              iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-              praesentium ipsam ratione harum!
+            <p class="text fs-2 my-2">
+              Müştərilərimizin hər biri, şirkətin böyüklüyündən asılı olmayaraq, bizim üçün birmənalı şəkildə vacibdir
+              və ildən-ilə məmnun müştəri sayımızın artmas bizneslərinə qatdıgımız əhəmiyyətli dəyəri əks etdirir.
             </p>
 
-            <p class="fw-600 fs-3 main-title mt-5">Our Clients</p>
+            <p class="fw-600 fs-3 main-title mt-5"> Müştərilərimiz</p>
             <div class="row justify-content-center">
               <div class="clients-wrapper my-5">
                 <div class="client-image">
@@ -526,48 +519,45 @@
         <div class="row">
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-1.jpg')">
-              <div class="personel-card-title white">Services</div>
-              <div class="personel-card-info white mt-5">Audit</div>
+              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-info white mt-5">Audit Xidmətləri</div>
               <div class="personel-card-sub white my-3">
-                Seasoned practitioners who deliver thoughtful, insightful
-                options leading to high quality independent audits. Lorem
-                ipsum dolor, sit amet
+                Audit xidmətləri FA Audit Consulting tərəfindən müştərilərinə göstərdiyi xidmətlərin əsasını təşkil
+                edir. Biz multidissiplinar partnorlarımıza yüksək keyfiyyətli audit servisləri təqdim edirik.
               </div>
               <a href="./audit.html">
                 <button class="btndefault btn-w border-w">
-                  Learn about our commitment quality
+                  Audit Xidmətlərimiz haqqında məlumat əldə edin
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-2.jpg')">
-              <div class="personel-card-title white">Services</div>
-              <div class="personel-card-info white mt-5">Tax</div>
+              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-info white mt-5">Vergi Xidmətləri</div>
               <div class="personel-card-sub white my-3">
-                Knowledgeable professionals who can help our firm clients
-                assess and manage tax complexities, deal with business
-                realities, and be ready for the future
+                Müştərilərimizə kömək edə biləcək bilikli mütəxəssislər vergi mürəkkəbliyini aradan qaldıraraq, biznesli
+                gələcəyə hazırlıyır
               </div>
-              <a href="services-tax.html">
+              <a href="./services-tax.html">
                 <button class="btndefault btn-w border-w">
-                  Understand our tax expertise
+                  Vergitutma işlərinizi FA Audit Consulting-ə etibar edin
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-4 px-0">
             <div class="personel-card" style="background-image: url('./assets/img/why-fa-3.jpg')">
-              <div class="personel-card-title white">Services</div>
-              <div class="personel-card-info white mt-5">Advisory</div>
+              <div class="personel-card-title white">Xidmətlər</div>
+              <div class="personel-card-info white mt-5">Məsləhət Xidmətləri</div>
               <div class="personel-card-sub white my-3">
-                Progressive thinkers who provide operational and transactional
-                advisory services to enable our clients to create, protect,
-                and transform value.
+                Müştərilərimizə dəyər yaratmaq və onlara dəyişdirmək imkanı vermək üçün əməliyyat məsləhət xidmətləri
+                göstəririk
               </div>
-              <a href="services-advisory.html">
+              <a href="./services-advisory.html">
                 <button class="btndefault btn-w border-w">
-                  How our network can help you
+                  Məsləhət xidmətlərimiz sizə necə kömək edə bilər
                 </button>
               </a>
             </div>
