--- a/team.html
+++ b/team.html
@@ -109,7 +109,7 @@
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
             <form action="#" class="toggleInput" style="display: none;">
-              <input type="text" class="search-input">
+              <input type="text" class="search-input" placeholder="Search">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
               Sizin Maliyyə Sabitliyiniz
@@ -450,32 +450,19 @@
         <div class="row my-5">
           <div class="col-12">
             <p class="fw-600 fs-3 main-title">
-              Going beyond is what makes FA Consulting different. And what
-              clients value most.
+              Komandamız
             </p>
             <p class="fw-600 fs-3 main-title my-5">
-              We make business personal.
+              FA Audit Consulting insanlara inkişaf etmək imkanı verilən gənc və dinamik bir mühitdir.
             </p>
             <p class="text fs-2 my-5">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-              a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-              quibusdam sint dolor voluptatem excepturi corporis. Expedita
-              delectus non qui vitae velit omnis corrupti ducimus, quas
-              consequatur sequi blanditiis autem deserunt harum architecto
-              iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-              praesentium ipsam ratione harum!
+              Tərəfdaşlarımız həm akademik, həm də kommersiya iş mühitində geniş ixtisaslara, biliklərə, bacarıqlara və
+              təcrübəyə malikdirlər. Onların işlərinə olan şəxsi diqqəti, uzun illər ərzində qazandıqları geniş təcrübə
+              və müştərilərimizlə qurdugları peşakar münasibətlər şirkətimizə yüksək dəyər qatır. Bundan əlavə, bizim
+              müştəri tələblərini tam başa düşmək və həll etmək üçün müstəsna dərəcədə güclü önəm yetiririk.
             </p>
 
-            <p class="fw-600 fs-3 main-title mt-5">Commitment to quality</p>
-            <p class="text fs-2 my-5">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-              a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-              quibusdam sint dolor voluptatem excepturi corporis. Expedita
-              delectus non qui vitae velit omnis corrupti ducimus, quas
-              consequatur sequi blanditiis autem deserunt harum architecto
-              iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-              praesentium ipsam ratione harum!
-            </p>
+
           </div>
         </div>
       </div>
