--- a/why-fac.html
+++ b/why-fac.html
@@ -110,7 +110,7 @@
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
             <form action="#" class="toggleInput" style="display: none;">
-              <input type="text" class="search-input">
+              <input type="text" class="search-input" placeholder="Search">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
               Sizin Maliyyə Sabitliyiniz
@@ -450,77 +450,25 @@
       <div class="container">
         <div class="row my-5">
           <div class="col-12">
-            <p class="fw-600 fs-3 main-title">
-              Going beyond is what makes FA Consulting different. And what
-              clients value most.
-            </p>
             <p class="fw-600 fs-3 main-title my-5">
-              We make business personal.
+              Niyə biz?
             </p>
             <p class="text fs-2 my-5">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-              a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-              quibusdam sint dolor voluptatem excepturi corporis. Expedita
-              delectus non qui vitae velit omnis corrupti ducimus, quas
-              consequatur sequi blanditiis autem deserunt harum architecto
-              iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-              praesentium ipsam ratione harum!
+              Bütün dünyada maliyyə tənzimləyici orqanları beynəlxalq ticarəti idarə etmək üçün hazırlanmış kompleks
+              mühasibat uçotu normlarını hər il artan formanda təqdim etdilər.
             </p>
 
-            <p class="fw-600 fs-3 main-title mt-5">
-              We work at the pace that matters - yours.
-            </p>
+
             <p class="text fs-2 my-5">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Accusantium, iure? Fuga vero incidunt vel mollitia tempora.
-              Ratione, omnis dolor fugiat atque deserunt, eligendi veritatis
-              nesciunt labore accusamus ex quod vel minus sed autem at quos
-              praesentium voluptatem voluptatibus rerum beatae animi error
-              consequatur itaque voluptate. Error repudiandae non aliquid
-              modi? Magnam, recusandae inventore. Nisi dolore facilis
-              dignissimos veritatis architecto eligendi, nemo neque quae.
-              Illum, soluta?
+              Hesabatlarımızda təqdim etdiyimiz nəticələr və tövsiyələrimiz müştərilərimizin muhasibat, audit, vergi
+              həllərinin asanlaşdırmaq üçündür.
             </p>
-            <p class="fw-600 fs-3 main-title mt-5">
-              We value diverse perspectives.
-            </p>
+
             <p class="text fs-2 my-5">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Accusantium, iure? Fuga vero incidunt vel mollitia tempora.
-              Ratione, omnis dolor fugiat atque deserunt, eligendi veritatis
-              nesciunt labore accusamus ex quod vel minus sed autem at quos
-              praesentium voluptatem voluptatibus rerum beatae animi error
-              consequatur itaque voluptate. Error repudiandae non aliquid
-              modi?
+              Bizim rolumuz təkcə uyğunluğu asanlaşdırmaq deyil, həm də fəaliyyət göstərdiyiniz hər bir sahə üçün düzgün
+              strateji və vergi məsləhətləri almanızı təmin etməkdir.
             </p>
-            <p class="fw-600 fs-3 main-title mt-5">
-              We don’t predict the future. We help you shape it.
-            </p>
-            <p class="text fs-2 my-5">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Accusantium, iure? Fuga vero incidunt vel mollitia tempora.
-              Ratione, omnis dolor fugiat atque deserunt, eligendi veritatis
-              nesciunt labore accusamus ex quod vel minus sed autem at quos
-              praesentium voluptatem voluptatibus rerum beatae animi error
-              consequatur itaque voluptate. Error repudiandae non aliquid
-              modi?labore accusamus ex quod vel minus sed autem at quos
-              praesentium voluptatem voluptatibus rerum beatae animi error
-              consequatur itaque voluptate. Error repudiandae non aliquid
-              modi? consequatur itaque voluptate. Error repudiandae non
-              aliquid modi?labore accusamus ex quod vel minus sed autem at
-              quos praesentium voluptatem voluptatibus rerum beatae animi
-              error consequatur itaque voluptate. Error repudiandae non
-              aliquid modi?
-            </p>
-            <p class="fw-600 fs-3 main-title mt-5">
-              We are committed to delivering consistently high quality
-            </p>
-            <p class="text fs-2 my-5">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
-              quidem pariatur quod nobis iste aut, id officiis accusamus
-              eligendi quae nesciunt! Natus, maxime! Optio minus corrupti
-              commodi deserunt! Similique, unde.
-            </p>
+
           </div>
         </div>
       </div>
