--- a/tehsil.html
+++ b/tehsil.html
@@ -112,7 +112,7 @@
                 <div class="col-6 desk-nav justify-content-end">
                     <div class="icon-box d-flex justify-content-end align-items-center">
                         <form action="#" class="toggleInput" style="display: none;">
-                            <input type="text" class="search-input">
+                            <input type="text" class="search-input" placeholder="Search">
                         </form>
                         <a href="#" class="hover-cc primary toggleInput">
                             Sizin Maliyyə Sabitliyiniz
